deployment/ui/frontend_deployment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vue-ingress
  namespace: demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Request-URI: $request_uri";

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - frontend.elyte.com
      secretName: tls-secret
   
  rules:
  - host: frontend.elyte.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vuejs
            port:
              number: 3001

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vuejs
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      name: vuejs
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: vuejs
        role: frontend
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: vuejs
          imagePullPolicy: Always
          image: elyte5star/vuej3:v1 
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 0.5
            requests:
              cpu: 0.25 
---
kind: Service
apiVersion: v1
metadata:
  name: vuejs
  namespace: demo
spec:
  selector:
    name: vuejs
  ports:
  - port: 3001
    name: http    
    targetPort: 80
  - port: 4001
    name: https
    targetPort: 443
