deployment/ui/ui_deployment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vuejs-ingress
  namespace: demo
  annotations:
    nginx.org/ssl-services: "vuejs"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - demo-elyte.test
      secretName: tls-secret
  rules:
    - host: demo-elyte.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vuejs
                port:
                  number: 8081
---

kind: Service
apiVersion: v1
metadata:
  name: vuejs
  namespace: demo
spec:
  type: LoadBalancer
  loadBalancerIP: 10.64.140.44
  selector:
    name: vuejs
  ports:
  - name: http
    port: 8081 #expose at this port    
    targetPort: 8081
  
            
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: vuejs
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      name: vuejs
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: vuejs
        role: frontend
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: vuejs
          imagePullPolicy: Always
          image: elyte5star/vuej3:v1 
          ports:
            - containerPort: 8081
              name: http-web-ui
          resources:
            limits:
              cpu: 0.5
            requests:
              cpu: 0.25
