deployment/ui/ui_network.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ui-network-policy
  namespace: demo
spec:
  podSelector:
    matchLabels:
      role: frontend
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 8081
        - protocol: TCP
          port: 443
